--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>WelcomeView</title>
+<title>Home</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.2/css/bootstrap.min.css"
 		th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 	<link rel="stylesheet" href="../static/css/estilo.css" th:href="@{/css/estilo.css}">
@@ -31,7 +31,7 @@
 		</div>
 	</nav>
 
-	<h3 class="text-dark text-center mt-5">Bienvenido <span th:text="${nombreUsuario}"></span></h3>
+	<h3 class="text-dark text-center mt-5">Bienvenido <span th:text="${nombreUsuario}">usuario</span></h3>
 
 </body>
 
