--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
 		</div>
 	</nav>
 
-	<h1 class="text-center mt-5">Biblioteca Rapidos</h1>
+	<h1 class="text-center mt-5">Biblioteca Los Rapidos</h1>
 	
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"
